Avoid wrapping dates on large screens.

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,10 @@ h2 {
     vertical-align: middle;
 }
 
+.portfolio_date {
+    width: 25%;
+}
+
 .portfolio_source_image {
     margin-top: 2px;
     margin-left: 10px;
